tests/query_errors/pipeline_duplicate_streams_inside/error.txt
Error: 
    4 |   create stream snot;  
      |   ^^^^^^^^^^^^^^^^^^ Can't define the stream `snot` twice
